[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbao_MVVM"
version = "0.3"
authors = [
  { name="Meidozuki"},
]
description = "A library aiming for building an MVVM (or MVFM) project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Meidozuki/VBAO"
"Bug Tracker" = "https://github.com/Meidozuki/VBAO/issues"