[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbao_MVVM"
version = "0.1"
authors = [
  { name="Meidozuki", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Meidozuki/VBAO"
"Bug Tracker" = "https://github.com/Meidozuki/VBAO/issues"